force-app/main/default/objects/Quote/fields/Total_Service_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Service_Value__c</fullName>
    <label>Total Service Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>